--- a/angular13/angular.json
+++ b/angular13/angular.json
@@ -27,8 +27,10 @@
                             "src/assets"
                         ],
                         "styles": [
+
+                            "./node_modules/bootstrap/dist/css/bootstrap.min.css",
                             "src/styles.css",
-                            "node_modules/bootstrap/dist/css/bootstrap.min.css",
+
                             "node_modules/bootstrap-icons/font/bootstrap-icons.css",
                             "node_modules/ngx-toastr/toastr.css"
                         ],
@@ -98,9 +100,7 @@
                         "styles": [
                             "src/styles.css"
                         ],
-                        "scripts": [
-
-                        ]
+                        "scripts": []
                     }
                 }
             }
