--- a/angular13/angular.json
+++ b/angular13/angular.json
@@ -27,10 +27,9 @@
                             "src/assets"
                         ],
                         "styles": [
-
+                            "node_modules/ngx-spinner/animations/ball-scale-multiple.css",
                             "./node_modules/bootstrap/dist/css/bootstrap.min.css",
                             "src/styles.css",
-
                             "node_modules/bootstrap-icons/font/bootstrap-icons.css",
                             "node_modules/ngx-toastr/toastr.css"
                         ],
