--- a/angular13/package.json
+++ b/angular13/package.json
@@ -28,6 +28,7 @@
     "moment": "^2.29.3",
     "ng2-currency-mask": "^13.0.3",
     "ngx-bootstrap": "^8.0.0",
+    "ngx-spinner": "^13.1.1",
     "ngx-toastr": "^14.2.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
